# Differential-Forms

./: .gitignore  Differential Forms.ipynb  Differential_Forms.ipynb  Differential_Forms_interactive.ipynb  README.md  TODO.md  animations.py  main.py  pyproject.toml  requirements.txt  test_plots.py  utils.py
differentialforms/: Curve.py  Lissajous.py  Pendolum.py  Phasor.py  canvas.py  utils.py
differentialforms/drawings/: curve.py  lissajous.py  pendolum.py  phasor.py
drawings/: Canvas.py  Curve.py  Lissajous.py  Phasor.py  Physics_engine.ipynb  pymuck_basics.py  simulation.py
logo/: logo_DF-ai.ai
