[project]
name = "differential-forms"
version = "0.1.0"
description = "Pintograph simulator"
authors = [
    {name = "Gianmarco Cracco"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy (==2.1.3)",
    "pillow (>=11.1.0,<12.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "black (>=24.10.0,<25.0.0)",
    "numba (>=0.61.0,<0.62.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
